# libsyntyche

./: .gitignore  LICENSE  Makefile  README.md  common.py  entryviewlib.py  filehandling.py  fileviewer.py  matrix.py  setup.cfg  setup.py  taggedlist.py  tagsystem.py  terminal.py  test_matrix.py  test_taggedlist.py  texteditor.py  vulture_whitelist.py
libsyntyche/: app.py  cli.py  common.py  filehandling.py  fileviewer.py  tagsystem.py  terminal.py  texteditor.py  widgets.py
minimal-boilerplate/: Makefile  setup.cfg
tests/: test_cli.py  test_matrix.py
