[metadata]
name = libsyntyche
version = attr: libsyntyche.__version__
description = 'Common code for Python/PyQt programs'
url = 'https://github.com/nycz/libsyntyche'
author = 'nycz'

[options]
python_requires = >= 3.8
packages = libsyntyche
install_requires =
    PyQt5

[options.extras_require]
dev =
    flake8
    isort
    mypy
    pytest
    pytest-cov
    vulture


# == Tools ==

[flake8]
max-line-length = 100

[mypy]
python_version = 3.8
warn_unreachable = True
