[metadata]
name = FOO
version = attr: FOO.__version__
description = 'A description'
url = 'https://foo.bar'
author = 'nycz'

[options]
python_requires = 3.7
packages = FOO
install_requires =
    example_package

[options.extras_require]
dev =
    flake8
    isort
    mypy
    pytest
    pytest-cov
    vulture


# == Tools ==

[flake8]
max-line-length = 100

[mypy]
python_version = 3.7
warn_unreachable = True
