[metadata]
name = FOO
version = attr: FOO.__version__
description = 'A description'
url = 'https://foo.bar'
author = 'nycz'

[options]
python_requires = >= 3.8
packages = FOO
install_requires =
    example_package
include_package_data = True

[options.extras_require]
dev =
    flake8
    isort
    mypy
    pytest
    pytest-cov
    vulture

[options.entry_points]
gui_scripts =
    foo = foo.foo:main


# == Tools ==

[flake8]
max-line-length = 100

[mypy]
python_version = 3.8
warn_unreachable = True
